update gitignore with pycache

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,6 @@ spotiFFy.egg-info/PKG-INFO
 #   git rm -r .ipynb_checkpoints/
 
 # End of https://www.gitignore.io/api/jupyternotebook
+
+# python chache
+*.pyc
